--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindos à Turma do Primeiro Ano</h1>
+        <h1>Bem-vindos ao portal do 1º ano D</h1>
         <p>Seja bem-vindo à nossa comunidade educacional!</p>
       </header>
     
